# PrimeFactors

./: Dockerfile  issue.md  output.txt  repo-description.txt  setup.cfg
__gpt-4/: create_patch_string.md  create_patch_string.patch  detect_lines_to_be_changed_in_files.md  list_files_to_be_changed.md  prompt-0.md  prompt-1.md  prompt-2.md  prompt-3.md
gemma:latest/: list_files_to_be_changed.md  prompt-1.md
gpt-4/: create_patch_string.md  create_patch_string.patch  detect_lines_to_be_changed_in_files.md  generate_code_snippets_for_changes.md  prompt-0.md  prompt-1.md  prompt-2.md  prompt-3.md
gpt-4-0125-preview/: create_patch_string.md  create_patch_string.patch  generate_code_snippets_for_changes.md  prompt-0.md  prompt-iteration-0-task-0.md  prompt-iteration-0-task-1.md
gpt-4-with-feedback/: answers.json  create_patch_string.json  create_patch_string.patch  detect_lines_to_be_changed_in_files.json  generate_code_snippets_for_changes.json  list_files_to_be_changed.json  prompt-0.md  prompt-1.md  prompt-2.md  prompt-3.md  prompt-4.md  prompt-5.md  questions.json
mistral/: create_patch_string.md  create_patch_string.patch  generate_code_snippets_for_changes.md  prompt-1.md  prompt-2.md  prompt-iteration-0-task-1.md
mixtral-8x7b-32768/: create_patch_string.md  create_patch_string.patch  generate_code_snippets_for_changes.md  prompt-0.md  prompt-1.md  prompt-2.md  prompt-iteration-0-task-1.md
src/prime_factors/: primes.py
src/prime_factors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: main_test.py
